--- a/notebooks/transformers_dialogsum_en.ipynb
+++ b/notebooks/transformers_dialogsum_en.ipynb
@@ -179,7 +179,7 @@
     "    print(\"debug: start model initialization\")\n",
     "    model = {}\n",
     "    model[\"tokenizer\"] = AutoTokenizer.from_pretrained(\"philschmid/bart-large-cnn-samsum\")\n",
-    "    model[\"summarizer\"] = TFAutoModelForSeq2SeqLM.from_pretrained(\"philschmid/bart-large-cnn-samsum\")\n",
+    "    model[\"summarizer\"] = AutoModelForSeq2SeqLM.from_pretrained(\"philschmid/bart-large-cnn-samsum\")\n",
     "    # model[\"tokenizer\"] = AutoTokenizer.from_pretrained(\"/srv/app/model/data/samsum_tok\")\n",
     "    # model[\"summarizer\"] = AutoModelForSeq2SeqLM.from_pretrained(\"/srv/app/model/data/samsum\")\n",
     "    print(\"debug: model initialized\")\n",
