added final fine-tune script for classification

--- a/notebooks/appNLP_classification_final.ipynb
+++ b/notebooks/appNLP_classification_final.ipynb
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "df, param = stage(\"bert_classification_en_finetuned_test\")"
+    "df, param = stage(\"bert_classification_en_finetuned_final\")"
    ]
   },
   {
@@ -284,7 +284,13 @@
     "    tag = \"-- process=fine_tuning_progress model={} max_epoch={} -- \".format(param['options']['params']['base_model'], param['options']['params']['max_epochs'])\n",
     "    l = len(list(df.columns)) - 1\n",
     "    MODEL_DIRECTORY = os.path.join(\"/srv/app/model/data/classification\", param['options']['params']['lang'],param['options']['model_name'])\n",
-    "    \n",
+    "    if \"batch_size\" in param['options']['params']:\n",
+    "        print(tag + \"setting batch size to \", param['options']['params']['batch_size'])\n",
+    "        batch_size_train = int(param['options']['params']['batch_size'])\n",
+    "        batch_size_valid = int(param['options']['params']['batch_size'])\n",
+    "    else:\n",
+    "        batch_size_train = 4\n",
+    "        batch_size_valid = 4\n",
     "    # Data preparation\n",
     "    def text_preprocessing(text):\n",
     "        if param['options']['params']['lang'] == \"en\":\n",
@@ -398,7 +404,7 @@
     "        \"\"\"Train the BertClassifier model.\n",
     "        \"\"\"\n",
     "        # Start training loop\n",
-    "        print(\"Start training...\\n\")\n",
+    "#         print(\"Start training...\\n\")\n",
     "        for epoch_i in range(epochs):\n",
     "            # =======================================\n",
     "            #               Training\n",
@@ -412,12 +418,14 @@
     "\n",
     "            # Reset tracking variables at the beginning of each epoch\n",
     "            total_loss, batch_loss, batch_counts = 0, 0, 0\n",
+    "            \n",
+    "            total = len(train_dataloader)\n",
     "\n",
     "            # Put the model into the training mode\n",
     "            model.train()\n",
-    "            train_data = tqdm(train_dataloader, file=sys.stdout)\n",
-    "            for step, batch in enumerate(train_data):\n",
-    "                train_data.set_description(tag)\n",
+    "#             train_data = tqdm(train_dataloader, file=sys.stdout)\n",
+    "            for step, batch in enumerate(train_dataloader):\n",
+    "#                 train_data.set_description(tag)\n",
     "                batch_counts +=1\n",
     "                # Load batch to GPU\n",
     "                b_input_ids, b_attn_mask, b_labels = tuple(t.to(device) for t in batch)\n",
@@ -433,7 +441,7 @@
     "                batch_loss += loss.item()\n",
     "                total_loss += loss.item()\n",
     "                \n",
-    "                train_data.set_postfix(loss=total_loss / (step+1))\n",
+    "#                 train_data.set_postfix(loss=total_loss / (step+1))\n",
     "\n",
     "                # Perform a backward pass to calculate gradients\n",
     "                loss.backward()\n",
@@ -445,13 +453,15 @@
     "                optimizer.step()\n",
     "                scheduler.step()\n",
     "                \n",
+    "                print(tag + \"Processed {}% of the {}-th epoch. Finished {} out of {} batches. Loss: {} \".format(round(batch_counts/total*100), epoch_i+1, batch_counts, total, round(batch_loss / batch_counts,2)), flush=True)\n",
+    "                \n",
     "                if (step % 50000 == 0 and step != 0) or (step == len(train_dataloader) - 1):\n",
     "                    # Calculate time elapsed for 20 batches\n",
     "                    time_elapsed = time.time() - t0_batch\n",
     "\n",
     "                    # Print training results\n",
     "#                     print(f\"{epoch_i + 1:^7} | {step:^7} | {batch_loss / batch_counts:^12.6f} | {'-':^10} | {'-':^9} | {time_elapsed:^9.2f}\")\n",
-    "\n",
+    "                    \n",
     "                    # Reset batch tracking variables\n",
     "                    batch_loss, batch_counts = 0, 0\n",
     "                    t0_batch = time.time()\n",
@@ -462,9 +472,9 @@
     "#             print(\"-\"*70)\n",
     "            \n",
     "            tokenizer.save_pretrained(MODEL_DIRECTORY)\n",
-    "            print(tag + \"tokenizer saved in \" + MODEL_DIRECTORY)\n",
+    "            print(tag + \"tokenizer saved in \" + MODEL_DIRECTORY, flush=True)\n",
     "            torch.save(model.state_dict(),os.path.join(MODEL_DIRECTORY, \"pytorch_model.pt\"))\n",
-    "            print(tag + \"model saved in \" + MODEL_DIRECTORY)\n",
+    "            print(tag + \"model saved in \" + MODEL_DIRECTORY, flush=True)\n",
     "            # =======================================\n",
     "            #               Evaluation\n",
     "            # =======================================\n",
@@ -480,7 +490,7 @@
     "                        epoch_i, epochs, avg_train_loss, val_loss, val_accuracy,\n",
     "                        str(int(math.floor(time_elapsed / 60))) + 'm' if math.floor(time_elapsed / 60) > 0 else '',\n",
     "                        time_elapsed % 60\n",
-    "                    ))\n",
+    "                    ), flush=True)\n",
     "\n",
     "#                 print(f\"{epoch_i + 1:^7} | {'-':^7} | {avg_train_loss:^12.6f} | {val_loss:^10.6f} | {val_accuracy:^9.2f} | {time_elapsed:^9.2f}\")\n",
     "#                 print(\"-\"*70)\n",
@@ -834,56 +844,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save(MODEL_DIRECTORY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/srv/app/model/data/summarization/en/t5_dialog_jp_finetuned'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MODEL_DIRECTORY = \"/srv/app/model/data/summarization\"\n",
-    "os.path.join(MODEL_DIRECTORY, param['options']['params']['lang'], param['options']['model_name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['text']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param['options']['feature_variables']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -902,8 +862,6 @@
     "# load model from name in expected convention \"<algo_name>_<model_name>.h5\"\n",
     "def load(path):\n",
     "    model = {}\n",
-    "    model[\"tokenizer\"] = T5Tokenizer.from_pretrained(path)\n",
-    "    model[\"summarizer\"] = T5ForConditionalGeneration.from_pretrained(path)\n",
     "    return model"
    ]
   },
@@ -1003,7 +961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1017,12 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
